# slackker

./: .env.example  .gitignore  CONTRIB.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  model.py  prototyping.ipynb  pyproject.toml  pytest.ini  run_tests.sh  setup.py  slackker.py
.github/: FUNDING.yml
.github/workflows/: deploy-website.yml  get-coverage-badge.yml  pr-tests.yml  publish-test-pypi.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
slackker/: __init__.py  callbacks.py  listener.py
slackker/callbacks/: __init__.py  basic.py  keras.py  lightning.py  simple.py
slackker/core/: __init__.py  client.py  discord.py  models.py  slack.py  teams.py  telegram.py
slackker/mcp/: __init__.py  config.py  handler.py  server.py
slackker/utils/: ccolors.py  checkker.py  funckker.py  functions.py  logger.py  network.py  plotting.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_core.py  test_keras.py  test_lightning.py  test_listener.py  test_mcp.py  test_network.py  test_plotting.py
utils/: chekker.py
website/: index.html  robots.txt  script.js  sitemap.xml  styles.css
