[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slackker"
version = "1.3.2"
description = "Python package for monitoring your pipeline & Model training status in real-time on Slack, Telegram and Microsoft Teams."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Siddhesh Gunjal", email = "siddhu19@live.com"},
]
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "slack-sdk>=3.39.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://siddheshgunjal.github.io/slackker/"
Repository = "https://github.com/siddheshgunjal/slackker"
Issues = "https://github.com/siddheshgunjal/slackker/issues"
Changelog = "https://github.com/siddheshgunjal/slackker/releases"

[tool.hatch.build.targets.wheel]
include = ["slackker/**"]
exclude = ["tests/**", "website/**"]
[tool.hatch.version]
path = "slackker/__init__.py"
pattern = "__version__ = [\"'](.*?)[\"']"
write = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "keras>=3.13.2",
    "lightning>=2.6.1",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.21.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "pytest-asyncio>=1.3.0",
]
